When wheel scrolling in monthview, month view changed the displayed date range and didn't notify the application about it.

BUG: 250256